[gd_scene load_steps=38 format=3 uid="uid://dosulntiwpmvw"]

[ext_resource type="Script" path="res://objects/card_display.gd" id="1_wdlaa"]
[ext_resource type="Texture2D" uid="uid://dicq202oyt24d" path="res://sprites/card_bg_battle.png" id="2_fgroy"]
[ext_resource type="Texture2D" uid="uid://dd0mmnwesdund" path="res://sprites/card_images/missing_artwork.png" id="3_7uojd"]
[ext_resource type="Texture2D" uid="uid://c56nn7e22mwlx" path="res://sprites/card_images/XS1/lv_10_momo_full.png" id="4_3im64"]
[ext_resource type="PackedScene" uid="uid://g7yv71p73utl" path="res://objects/attribute.tscn" id="4_bj62e"]
[ext_resource type="FontFile" uid="uid://cwo0ya5s4od8f" path="res://fonts/Roboto/RobotoCondensed-VariableFont_wght.ttf" id="4_ktoeu"]
[ext_resource type="Texture2D" uid="uid://wism5js2a0y8" path="res://sprites/rare_border.png" id="5_kgjly"]
[ext_resource type="FontFile" uid="uid://15gi41vs8sva" path="res://fonts/Anton/Anton-Regular.ttf" id="5_lxkqa"]
[ext_resource type="Texture2D" uid="uid://bmnyp650trfv7" path="res://sprites/rarity/rarity_common.png" id="5_ty2re"]
[ext_resource type="Texture2D" uid="uid://cd8gb1b5tt6em" path="res://sprites/card_back.png" id="6_8gxj3"]
[ext_resource type="FontFile" uid="uid://ng1y54e8x08v" path="res://fonts/Roboto/Roboto-Bold.ttf" id="7_85wss"]
[ext_resource type="FontFile" uid="uid://wcj25unqnrqf" path="res://fonts/NotoSansJP/NotoSansJP-Regular.ttf" id="7_udeip"]
[ext_resource type="FontFile" uid="uid://do6lscs8csbaq" path="res://fonts/Roboto/Roboto-Regular.ttf" id="8_4hlpo"]
[ext_resource type="Texture2D" uid="uid://cqocycwm1qyxq" path="res://sprites/paintbrush_shadow.png" id="12_5iwwb"]
[ext_resource type="Texture2D" uid="uid://dqeydgvwote6m" path="res://sprites/paintbrush_outline.png" id="13_mxnfu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f3feu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qw08w"]
size = Vector2(800, 1200)

[sub_resource type="FontVariation" id="FontVariation_x2f4s"]
base_font = ExtResource("7_udeip")
variation_embolden = 0.25

[sub_resource type="FontVariation" id="FontVariation_d3wog"]
fallbacks = Array[Font]([SubResource("FontVariation_x2f4s")])
base_font = ExtResource("4_ktoeu")
variation_embolden = 0.25
spacing_glyph = 2

[sub_resource type="LabelSettings" id="LabelSettings_rdleq"]
font_size = 52
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="FontVariation" id="FontVariation_juc35"]
fallbacks = Array[Font]([SubResource("FontVariation_x2f4s")])
base_font = ExtResource("4_ktoeu")
variation_embolden = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_owst0"]
line_spacing = -12.0
font_size = 46
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_uis4s"]
line_spacing = -8.0
font_size = 38
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_fy67i"]
font_size = 64
outline_color = Color(0, 0, 0, 1)
shadow_size = 6
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="FontVariation" id="FontVariation_wriv3"]
base_font = ExtResource("7_85wss")

[sub_resource type="LabelSettings" id="LabelSettings_ylnjb"]
font_size = 48
font_color = Color(0.545098, 0.972549, 0.976471, 1)
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_jti33"]
font_size = 48
font_color = Color(1, 1, 0.52549, 1)
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_guvnp"]
font_size = 48
font_color = Color(0.980392, 0.521569, 0.501961, 1)
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_hirw7"]
font_size = 48
font_color = Color(1, 1, 0.52549, 1)
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_arssg"]
font_size = 48
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="LabelSettings" id="LabelSettings_3ahw8"]
font_size = 48
font_color = Color(0.713726, 0.760784, 0.984314, 1)
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="Theme" id="Theme_b0mdc"]
default_font_size = 32

[sub_resource type="FontVariation" id="FontVariation_ao65t"]
base_font = ExtResource("7_udeip")

[sub_resource type="FontVariation" id="FontVariation_m0yk2"]
fallbacks = Array[Font]([SubResource("FontVariation_ao65t")])
base_font = ExtResource("8_4hlpo")

[sub_resource type="FontVariation" id="FontVariation_ta62g"]
base_font = ExtResource("8_4hlpo")
variation_embolden = 0.25

[sub_resource type="LabelSettings" id="LabelSettings_g0d37"]
font_size = 32
outline_color = Color(0, 0, 0, 1)
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(-4, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bd2rd"]
bg_color = Color(0.247059, 0.247059, 0.231373, 0.862745)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.741176, 0.741176, 0.741176, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="Card" type="Node2D"]
script = ExtResource("1_wdlaa")

[node name="Panel" type="Panel" parent="."]
offset_left = -401.0
offset_top = -601.0
offset_right = 399.0
offset_bottom = 601.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_f3feu")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_qw08w")

[node name="Content" type="Node2D" parent="."]

[node name="Background" type="Sprite2D" parent="Content"]
texture = ExtResource("2_fgroy")

[node name="Picture" type="Sprite2D" parent="Content"]
position = Vector2(0, -234)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_7uojd")

[node name="PictureFull" type="Sprite2D" parent="Content"]
visible = false
position = Vector2(0, 1.19209e-07)
scale = Vector2(0.97, 0.97)
texture = ExtResource("4_3im64")

[node name="Border" type="Sprite2D" parent="Content"]
visible = false
texture = ExtResource("5_kgjly")

[node name="Name" type="Label" parent="Content"]
offset_left = -360.0
offset_top = -577.0
offset_right = -39.0
offset_bottom = -501.0
theme_override_fonts/font = SubResource("FontVariation_d3wog")
text = "Card Name"
label_settings = SubResource("LabelSettings_rdleq")
vertical_alignment = 1

[node name="SmallName" type="Label" parent="Content"]
offset_left = -360.0
offset_top = -572.0
offset_right = -39.0
offset_bottom = -505.0
theme_override_fonts/font = SubResource("FontVariation_juc35")
text = "Card Name"
label_settings = SubResource("LabelSettings_owst0")
vertical_alignment = 1

[node name="TwoLineName" type="Label" parent="Content"]
offset_left = -360.0
offset_top = -588.0
offset_right = -39.0
offset_bottom = -490.0
theme_override_fonts/font = SubResource("FontVariation_d3wog")
text = "Card Name
Line 2"
label_settings = SubResource("LabelSettings_uis4s")
vertical_alignment = 1

[node name="TypeBattle" type="Label" parent="Content"]
offset_left = 39.0
offset_top = -588.0
offset_right = 300.0
offset_bottom = -490.0
theme_override_fonts/font = ExtResource("5_lxkqa")
text = "Battle"
label_settings = SubResource("LabelSettings_fy67i")
horizontal_alignment = 2

[node name="TypeOther" type="Label" parent="Content"]
visible = false
offset_left = 104.0
offset_top = -588.0
offset_right = 365.0
offset_bottom = -490.0
theme_override_fonts/font = ExtResource("5_lxkqa")
text = "Battle"
label_settings = SubResource("LabelSettings_fy67i")
horizontal_alignment = 2

[node name="Attribute" parent="Content" instance=ExtResource("4_bj62e")]
position = Vector2(337, -541)
scale = Vector2(0.35, 0.35)

[node name="AttributePanel" type="Panel" parent="Content"]
offset_left = 306.0
offset_top = -578.0
offset_right = 366.0
offset_bottom = -498.0
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_f3feu")

[node name="Stats" type="Node2D" parent="Content"]

[node name="HP" type="Label" parent="Content/Stats"]
offset_left = -360.0
offset_top = 49.0
offset_right = -213.0
offset_bottom = 116.0
theme_override_fonts/font = SubResource("FontVariation_wriv3")
text = "HP"
label_settings = SubResource("LabelSettings_ylnjb")

[node name="Value" type="Label" parent="Content/Stats/HP"]
layout_mode = 0
offset_left = 32.0
offset_right = 179.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("7_85wss")
text = "0"
label_settings = SubResource("LabelSettings_jti33")
horizontal_alignment = 2

[node name="Attack" type="Label" parent="Content/Stats"]
offset_left = -104.0
offset_top = 49.0
offset_right = 43.0
offset_bottom = 116.0
theme_override_fonts/font = ExtResource("7_85wss")
text = "ATK"
label_settings = SubResource("LabelSettings_guvnp")

[node name="Value" type="Label" parent="Content/Stats/Attack"]
layout_mode = 0
offset_left = 32.0
offset_right = 179.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("7_85wss")
text = "0"
label_settings = SubResource("LabelSettings_hirw7")
horizontal_alignment = 2

[node name="AttackType" type="Label" parent="Content/Stats"]
offset_left = 96.0
offset_top = 49.0
offset_right = 357.0
offset_bottom = 116.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("7_85wss")
text = "Target"
label_settings = SubResource("LabelSettings_arssg")
horizontal_alignment = 2

[node name="Field" type="Label" parent="Content"]
offset_left = -360.0
offset_top = 147.0
offset_right = 31.0
offset_bottom = 214.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("7_85wss")
text = "STAT_FIELD"
label_settings = SubResource("LabelSettings_3ahw8")

[node name="Value1" parent="Content/Field" instance=ExtResource("4_bj62e")]
position = Vector2(160, 31)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Value2" parent="Content/Field" instance=ExtResource("4_bj62e")]
position = Vector2(224, 31)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Value3" parent="Content/Field" instance=ExtResource("4_bj62e")]
position = Vector2(288, 31)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Value4" parent="Content/Field" instance=ExtResource("4_bj62e")]
position = Vector2(352, 31)
rotation = 0.261799
scale = Vector2(0.35, 0.35)

[node name="Cost" type="Label" parent="Content"]
offset_left = 3.0
offset_top = 147.0
offset_right = 291.0
offset_bottom = 214.0
theme_override_fonts/font = ExtResource("7_85wss")
text = "STAT_COST"
label_settings = SubResource("LabelSettings_3ahw8")
horizontal_alignment = 2

[node name="Value" type="Label" parent="Content/Cost"]
layout_mode = 0
offset_left = 179.0
offset_right = 355.0
offset_bottom = 67.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("7_85wss")
text = "0"
label_settings = SubResource("LabelSettings_hirw7")
horizontal_alignment = 2

[node name="Text" type="RichTextLabel" parent="Content"]
offset_left = -364.0
offset_top = 268.0
offset_right = 364.0
offset_bottom = 524.0
mouse_filter = 2
theme = SubResource("Theme_b0mdc")
theme_override_constants/outline_size = 16
theme_override_fonts/normal_font = SubResource("FontVariation_m0yk2")
text = "<Failed to get text>"
scroll_active = false

[node name="Rarity" type="Sprite2D" parent="Content"]
position = Vector2(-341, 544)
texture = ExtResource("5_ty2re")

[node name="SerialNumber" type="Label" parent="Content"]
offset_left = -307.0
offset_top = 525.0
offset_right = -99.0
offset_bottom = 570.0
theme_override_fonts/font = SubResource("FontVariation_ta62g")
text = "Serial #"
label_settings = SubResource("LabelSettings_g0d37")

[node name="ArtistIcon" type="Sprite2D" parent="Content"]
position = Vector2(352, 546)
rotation = -0.233874
scale = Vector2(0.18, 0.18)
texture = ExtResource("12_5iwwb")

[node name="ArtistIconOutlined" type="Sprite2D" parent="Content"]
position = Vector2(352, 544)
rotation = -0.233874
scale = Vector2(0.18, 0.18)
texture = ExtResource("13_mxnfu")

[node name="Artist" type="Label" parent="Content"]
offset_left = -78.0
offset_top = 525.0
offset_right = 331.0
offset_bottom = 570.0
theme_override_fonts/font = SubResource("FontVariation_ta62g")
text = "Artist"
label_settings = SubResource("LabelSettings_g0d37")
horizontal_alignment = 2

[node name="Tooltip" type="Panel" parent="."]
visible = false
offset_left = 406.0
offset_top = 254.0
offset_right = 954.0
offset_bottom = 333.0
theme_override_styles/panel = SubResource("StyleBoxFlat_bd2rd")

[node name="Text" type="RichTextLabel" parent="Tooltip"]
layout_mode = 0
offset_left = 19.0
offset_top = 13.0
offset_right = 546.0
offset_bottom = 68.0
theme = SubResource("Theme_b0mdc")
theme_override_fonts/normal_font = ExtResource("8_4hlpo")
text = "This is for tooltips"
fit_content = true
scroll_active = false

[node name="Back" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_8gxj3")

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
[connection signal="mouse_entered" from="Content/AttributePanel" to="." method="_on_attribute_panel_mouse_entered"]
[connection signal="mouse_exited" from="Content/AttributePanel" to="." method="_on_attribute_panel_mouse_exited"]
[connection signal="mouse_entered" from="Content/Stats/AttackType" to="." method="_on_attack_type_mouse_entered"]
[connection signal="mouse_exited" from="Content/Stats/AttackType" to="." method="_on_attack_type_mouse_exited"]
[connection signal="mouse_entered" from="Content/Field" to="." method="_on_property_hover_started" binds= ["field"]]
[connection signal="mouse_exited" from="Content/Field" to="." method="_on_property_hover_ended" binds= ["field"]]
[connection signal="mouse_entered" from="Content/Cost/Value" to="." method="_on_property_hover_started" binds= ["cost"]]
[connection signal="mouse_exited" from="Content/Cost/Value" to="." method="_on_property_hover_ended" binds= ["cost"]]
[connection signal="meta_hover_ended" from="Content/Text" to="." method="_on_text_meta_hover_ended"]
[connection signal="meta_hover_started" from="Content/Text" to="." method="_on_text_meta_hover_started"]
